--- a/github.html
+++ b/github.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/social.css">
     <title>GitHub</title>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="GitHub">
-    <a href="https://github.com/gustavoguanabara" target="_blank">ACESSE</a>
+    <a href="https://github.com/gustavoguanabara/" target="_blank">ACESSE</a>
 </body>
 </html>
